fix: perfect-scrollbar

--- a/src/app/shared/components/normal-layout/normal-layout.component.scss
+++ b/src/app/shared/components/normal-layout/normal-layout.component.scss
@@ -6,7 +6,6 @@ mat-sidenav-container{
   height: calc(100vh - #{$mat-toolbar-height-desktop});
   display: flex;
   flex-direction: row;
-
 }
 
 .menu{
@@ -15,9 +14,15 @@ mat-sidenav-container{
 }
 
 .app-main-content{
-  padding:8px;
-  width: 100%;
-  height: 100%;
   position: relative;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.outlet-wrapper{
+  padding:8px;
+  box-sizing: border-box;
+  width:100%;
+  height: 100%;
 }
