--- a/src/assets/styles/scss/etc/frame.scss
+++ b/src/assets/styles/scss/etc/frame.scss
@@ -55,3 +55,13 @@ input {
 .visible{
   overflow: visible;
 }
+
+.ps__rail-x{
+  top: auto !important;
+  bottom:0;
+}
+
+.ps__rail-y{
+  left: auto !important;
+  right: 0;
+}
